Fixed line height to align with buttons etc

--- a/base/_forms.scss
+++ b/base/_forms.scss
@@ -455,7 +455,7 @@ input[type=range].#{$base-prefix}form-range:focus::-ms-fill-upper {
   vertical-align: middle;
   outline: 0 none;
   padding: 0 40px 0 0.8rem;
-  line-height: 40px;
+  line-height: 35px;
   -webkit-appearance: none;
   -moz-appearance: none;
   width: 100%;
